--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -12,6 +11,7 @@ body {
   background-color: #f4f3f3;
   min-height: 100vh;
   margin: 0;
+  overflow-y: hidden;
 }
 body > div {
   width: 100%;
